styled notifications and fixed slack channels not showing channel and user

--- a/client/src/components/SecondaryMenu.module.css
+++ b/client/src/components/SecondaryMenu.module.css
@@ -204,10 +204,12 @@ text.active
 {
     overflow-x: hidden;
     white-space: nowrap;
+    font-weight: 200;
 }
 .notification > label:first-child
 {
     font-size: 11px;
+    font-weight: 300;
 }
 .notification > label:nth-child(2)
 {
